[package]
name = "image-overlay"
version = "2.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["OkaYu"]
description = "Overlay an image with blend mode."
keywords = ["image", "overlay", "blend", "blending"]
categories = ["multimedia::images"]
repository = "https://github.com/aiueo13/image-overlay"

[dependencies]
image = { version = ">=0.25", default-features = false }
pcg-mwc = { version = "0.2.1", optional = true }
serde = { version = "^1.0", default-features = false, optional = true, features = ["derive"] }

[features]
default = []
f64 = []
blend_dissolve = ["dep:pcg-mwc"]
serde = ["dep:serde"]